--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <p class="mb-0">&copy; 2024 Detik.com. All rights reserved.</p>
+                    <p class="mb-0">&copy; 2025 Karir.Detik.com. All rights reserved.</p>
                     <p class="mb-0">&copy; By : Nedianti Rellya</p>
                 </div>
                 <div class="col-md-6 text-md-end">
@@ -306,3 +306,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
