--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6">
                     <h1 class="hero-title">
-                        Bergabunglah dengan <span class="text-primary">Tim.Karir.Detik.com</span>
+                        Bergabunglah dengan <span class="text-primary">Karir Detik</span>
                     </h1>
                     <p class="hero-subtitle">
                         Wujudkan impian kariermu di media digital terdepan Indonesia. 
@@ -306,6 +306,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
